style.css
:root {
  --first-color: hsl(158, 36%, 37%);
  --second-color: hsl(228, 12%, 48%);
  --third-color: hsl(212, 21%, 14%);
  --bg-color: hsl(30, 38%, 92%);
  --bg-card-color: hsl(0, 0%, 100%);
  --btn-active: #1a4031;

  --border-radius: 0.5rem;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 14px;
}

body {
  background-color: var(--bg-color);
  font-family: "Montserrat", sans-serif;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.card-container {
  width: 600px;
  height: auto;
  margin: 0 auto;
  background-color: var(--bg-card-color);
  display: flex;
  border-radius: var(--border-radius);
  overflow: hidden;
  margin: auto;
}
.image-mobile{
  display: none;
  width: 100%;
  height: auto;
}

.image-desktop {
  width: 50%;
  height: auto;
}

.card-product {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding: 30px;
}

.card-title {
  color: var(--second-color);
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 500;
  letter-spacing: 4px;
}

.card-name {
  font-family: "Fraunces", serif;
  font-weight: 700;
  font-size: 32px;
  color: var(--third-color);
}

.card-info {
  color: var(--second-color);
  line-height: 1.6;
}

.card-price {
  display: flex;
  align-items: center;
  gap: 20px;
}

.actual-price {
  font-family: "Fraunces", serif;
  font-weight: 700;
  font-size: 30px;
  color: var(--first-color);
}

.old-price {
  text-decoration: line-through;
  color: var(--second-color);
}
.btn {
  transition: 0.2s ease;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
}

.btn:link,
.btn:visited {
  color: var(--bg-card-color);
  text-decoration: none;
  text-align: center;
  font-weight: 500;
  font-size: 16px;
  background-color: var(--first-color);
  padding: 14px;
  border-radius: 0.5rem;
}

.btn:hover {
  background-color: var(--btn-active);
}
.btn:active {
  background-color: var(--btn-active);
  transform: scale(0.95);
}
.shopping-cart{
  font-size: 12px;
}
footer{
  margin-top: auto;
  padding: 0 24px;
  margin-bottom: 8px;
}

@media only screen and (max-width: 620px){ 
  .image-desktop{
    display: none;
  }

  .image-mobile{
    display: block;
  }

  .card-container{
    flex-direction: column;
    width: 90vw;
    min-height: 600px;
  }
  .card-product {
    padding: 20px;
  }
}

@media only screen and (max-width: 300px) {
  .card-product {
    padding: 13px;
  }
  footer{
    display: none;
  }
}

/* Atribution */
.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

